# prefit

./: README.md  pyproject.toml
prefit/: __init__.py  dependencies.py  fit_emo.py  fit_mlr.py  fit_mlr_OLD.py  poten.py  prefit.py  utils.py
prefit/Example/: running.py
