[tool.poetry]
name = "prefit"
version = "0.1.0"
description = ""
authors = ["GBMitev <georgibogdanovmitev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.1"
numpy = "^1.26.1"
pandarallel = "^1.6.5"
lmfit = "^1.2.2"
scipy = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
